tests/idris2/reflection006/expected
1/1: Building refleq (refleq.idr)
LOG 0: [x, y]
LOG 0: Left: ((Prelude.Types.plus x) y)
LOG 0: Right: ((Prelude.Types.plus y) x)
Error: While processing right hand side of commutes. Error during reflection: Not done

refleq.idr:24:16--24:21
    |
 24 | commutes x y = prove
    |                ^^^^^

